<resources>
    <string name="app_name">RideShare Rental</string>
    <string name="Are_you_Exit">Are you sure you want to exit?</string>
    <string name="ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">YES</string>
    <string name="Are_you_logout">Are you sure you want to logout?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="book_screen">Book tasker by</string>
    <string name="payment_screen">Multiple payment</string>
    <string name="alert_screen">Instant Task</string>
    <string name="track_screen">Tracking towards</string>
    <string name="chat_screen">Chat with the tasker</string>
    <string name="book_text">Book tasker by</string>
    <string name="payment_text">Mutiple payment</string>
    <string name="alert_text">Instant task</string>
    <string name="track_text">Tracking towards</string>
    <string name="chat_text">Chat with the tasker</string>
    <string name="book_text1">tapping a button</string>
    <string name="payment_text1">options</string>
    <string name="alert_text1">alerts</string>
    <string name="track_text1">work location</string>
    <string name="chat_text1">and hire them</string>
    <string name="alert_ss">Alert</string>
    <string name="wish_list_empty">Please add car in WishList.</string>
    <string name="action_no_internet_title">No Internet!</string>
    <string name="action_no_internet_message">You are offline please check your internet connection</string>
    <string name="action_cancel_small">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="sign_up">Sign up</string>
    <string name="login_now_s">Login now</string>
    <string name="login_with_goole">Login with google</string>
    <string name="signup_with_google">Signup with google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="your_new_account">Your new account</string>
    <string name="string_with_html">If you are involved in an accident</string>
    <string name="string_with_html1">Please fill out the claim form below</string>
    <string name="driver_claim">Driver Claim</string>
    <string name="login">Login to</string>
    <string name="ride_share_rental">Ride Share Rental</string>
    <string name="reset_your">Reset Your</string>
    <string name="password">Password</string>
    <string name="forgot_1">Enter your email and we will send \n security code via SMS</string>
    <string name="submit">Submit</string>
    <string name="price_breakdown">Price Breakdown</string>
    <string name="active"> Active Reservation </string>
    <string name="past"> Past Reservation </string>
    <string name="find_car"> Find a Car</string>
    <string name="no_reservation">You have not made a reservation yet.. Find a car to start your journey</string>
    <string name="renatl_start">Rental Started</string>
    <string name="price">Price</string>
    <string name="renatl_end">Rental End</string>
    <string name="renatl_extent">Extend Rental </string>
    <string name="renatl_extent_details">Extend Details </string>
    <string name="download_document">Download Document</string>
    <string name="download_reg_cer">Download Registration Certificate</string>
    <string name="download_insurane">Download Insurance</string>
    <string name="rental_start"> Rental Started</string>
    <string name="rental_end">Rental End </string>
    <string name="show_similar_car">Show Similiar Cars</string>
    <string name="extentbtn">Click here to Extend </string>
    <string name="extentto">Extend to</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="to_1">To</string>
    <string name="rental_length">Rental Length</string>
    <string name="rental_price">Rental Price</string>
    <string name="insurance_fee">Insurance Fees</string>
    <string name="transaction_fee">Transaction Fee</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="one_time_bg_check">One time \nBackground Check</string>
    <string name="back">Back</string>
    <string name="e_mail">E-Mail</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="referal_cde">referal code(Optional)</string>
    <string name="phone_number">Phone Number</string>
    <string name="terms">By signing,you are agree to our terms and \n privacy policy</string>
    <string name="details">Details</string>
    <string name="rental_cost">Rental Cost</string>
    <string name="rental_date">Date</string>
    <string name="rental_extent_cost">Rental Extend Cost</string>
    <string name="dialog_app_exiting">Are you sure you want to Exit</string>
    <string name="navigation_drawer_ok">ok</string>
    <string name="navigation_drawer_cancel">cancel</string>
    <string name="editprofile"> Edit Profile </string>
    <string name="personalinfo">Personal Information</string>
    <string name="dob">Date of Birth</string>
    <string name="addr">Address</string>
    <string name="zipcode">Zip Code</string>
    <string name="license">License Information</string>
    <string name="license_no">License Number</string>
    <string name="exp_date">Expiration Date</string>
    <string name="bg_check">Background check</string>
    <string name="Driving_License">Driving License</string>
    <string name="chnge_profile"> Change profile picture</string>
    <string name="email">Email</string>
    <string name="ph_no">Phone Number</string>
    <string name="apart_no">H/APT No</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="license_state">License State</string>
    <string name="save">Save</string>
    <string name="upload_doc">Upload Documents</string>
    <string name="h_aptNo">Enter your house apartment No</string>
    <string name="don_hint">Enter your DOB</string>
    <string name="street_hint">Enter your street</string>
    <string name="address_hint">Enter your address</string>
    <string name="city_hint">Enter your city</string>
    <string name="state_hint">Enter your state</string>
    <string name="zipcode_hint">Enter your zip code</string>
    <string name="exp_hint">Enter your expiration date</string>
    <string name="license_hint">Enter your license number</string>
    <string name="username">Name</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="select_extend_date">Extend to date</string>
    <string name="chng_pswd"> Change Password</string>
    <string name="current_pswd"> Your current password</string>
    <string name="new_pswd"> Your new password</string>
    <string name="re_pswd"> Re-type new password</string>
    <string name="set_pswd">Set new password</string>
    <string name="Contact"> Contact Support</string>
    <string name="call"> Call Us</string>
    <string name="email_us"> E-mail Us</string>
    <string name="book_car_now">  Book this car now </string>
    <string name="perday"> Perday</string>
    <string name="perweek"> Perweek</string>
    <string name="permonth">  Permonth</string>
    <string name="response_time">  Response Time :</string>
    <string name="response_rating">  Response rating :</string>
    <string name="total_cars"> Total cars for rent :</string>
    <string name="see_more_car"> See more car for this owner</string>
    <string name="abt_this_car">About this Car</string>
    <string name="grt_running_car">Great Running Car</string>
    <string name="mileage">Mileage</string>
    <string name="reviews">Reviews</string>
    <string name="owner">Owner</string>
    <string name="vinnumber">VIN Number : </string>
    <string name="v_number">Vehicle Number : </string>
    <string name="notess">Notes : </string>
    <string name="verify_Driver_license_hint">We need to verify your driver license is valid to ensure everyones safety, upload the from and back of your drivers license here</string>
    <string name="msg_hint">Write a message</string>
    <string name="send">Send</string>
    <string name="add_credit_card"> Add credit card</string>
    <string name="secure"> This is a secure connection. You\'re safe</string>
    <string name="credit_card_hint"> Enter your credit card number</string>
    <string name="credit_card_cvv"> Enter your CVV2/CVS2</string>
    <string name="date">Date</string>
    <string name="security">Security Code</string>
    <string name="I_accpet">I Accpet</string>
    <string name="payment_terms_service">Payment Terms of Service</string>
    <string name="security_hint">Enter your security code</string>
    <string name="username_hint">Enter your name</string>
    <string name="cc_holder_hint">Enter card holder name</string>
    <string name="credit_card_no"> Credit card number</string>
    <string name="credit_cvv"> CVV2/CVS2</string>
    <string name="secure2"> To start making payment on Rideshare Rental please provide your payment details.</string>
    <string name="year">Year</string>
    <string name="vehical_no">Vehicle#</string>
    <string name="notes">Notes</string>
    <string name="vin">Vin</string>
    <string name="book_car">Book this car now</string>
    <string name="step3">Step 1 of 3</string>
    <string name="step_three">Step 3</string>
    <string name="booking">Booking</string>
    <string name="confirm_booking">Do you want to confirm Booking?</string>
    <string name="book_now">Book Now</string>
    <string name="step1">Step 1 of 3</string>
    <string name="how_long_rent">How long do you want to rent?</string>
    <string name="by_day">By day -</string>
    <string name="by_week">By week -</string>
    <string name="by_month">By month -</string>
    <string name="select_rental_period">Select your rental period</string>
    <string name="stepsleft2">2 Steps left</string>
    <string name="per_day"> /day </string>
    <string name="per_week">  /week </string>
    <string name="per_month">  /month </string>
    <string name="step2">Step 2 of 3</string>
    <string name="see_price_breakdown">See price breakdown</string>
    <string name="please_provide_driver_license">Please provide your driver License info</string>
    <string name="verification_your_acctn">This information is required to verify your account.</string>
    <string name="verify_Driver_license">Verify your Driver License</string>
    <string name="agree_to_pay">By checking this box you agree to pay </string>
    <string name="terms_condition">and agree to the terms and conditions.</string>
    <string name="stepsleft1">1 Steps left</string>
    <string name="fname_hint">First Name</string>
    <string name="Lname_hint">Last Name</string>
    <string name="enter_apartment_number">House and Apartment number</string>
    <string name="house_apt_no">House and Apartment number</string>
    <string name="h_apt_no">H/APT NO</string>
    <string name="done">Done</string>
    <string name="adavancefilter">Advance Filter</string>
    <string name="reset">Reset</string>
    <string name="enter_email_address">Enter E-Mail address</string>
    <string name="documents">Documents</string>
    <string name="owner_info">Ownwer Info</string>
    <string name="car_info">Car Info</string>
    <string name="booking_info">Booking Info</string>
    <string name="spent">Spent</string>
    <string name="insurance_document">Insurance and Document</string>
    <string name="conversation_admin_title">Start Conversation with Admin</string>
    <string name="conversation_owner_subject_hint">Subject</string>
    <string name="conversation_owner_message_hint">Message</string>
    <string name="conversation_owner_btn_submit">Submit</string>
</resources>