<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingBottom="0dp"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/action_layout"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        </RelativeLayout>


    <RelativeLayout
        android:layout_below="@+id/action_layout"
        android:background="@color/white_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white_color"
            android:layout_height="wrap_content">


            <com.ridesharerental.widgets.textviews.Custom_Textview_Bold
                android:id="@+id/change_pswd_lay_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:singleLine="true"
                android:text="@string/chng_pswd"
                android:textColor="@color/black"
                android:textSize="23dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_below="@+id/change_pswd_lay_txt"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <com.ridesharerental.widgets.textviews.Custom_Editext
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_curren_pass"
                    android:background="@drawable/edittext_bg"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:hint="@string/current_pswd"
                    android:textColor="@color/ligth_gray"
                    android:textSize="16dp" />


                <com.ridesharerental.widgets.textviews.Custom_Editext
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/edit_new_pass"
                    android:background="@drawable/edittext_bg"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:hint="@string/new_pswd"
                    android:textColor="@color/ligth_gray"
                    android:textSize="16dp" />

                <com.ridesharerental.widgets.textviews.Custom_Editext
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:id="@+id/edi_confirm_pass"
                    android:singleLine="true"
                    android:hint="@string/re_pswd"
                    android:textColor="@color/ligth_gray"
                    android:textSize="16dp" />



                <RelativeLayout
                    android:id="@+id/rel_next"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:background="@drawable/main_skip_background"
                    android:layout_height="45dp">

                    <com.ridesharerental.widgets.textviews.Custom_Textview_Medium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:singleLine="true"
                        android:text="@string/set_pswd"
                        android:textColor="@color/white_color"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
