<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/edittext_bg">


    <RelativeLayout
        android:id="@+id/header_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/_8sdp">
        <com.ridesharerental.widgets.textviews.Custom_Textview_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/txt_dialog"
            android:text="@string/conversation_admin_title"/>
        <ImageView
            android:id="@+id/img_compose_close"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/dialog_close"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/header_rl"
        android:id="@+id/line_view1"
        android:background="@drawable/grey_msg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_view1"
        android:padding="@dimen/_16sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_container_rl"
            android:background="@drawable/edittext_bg">
        <Spinner
        android:id="@+id/spinner_receiver"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="@dimen/_45sdp"/>
            <RelativeLayout
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center">
            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/icn_dropdown_arrow"/>
            </RelativeLayout>
        </RelativeLayout>
        <EditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/edittext_bg"
            android:padding="@dimen/_5sdp"
            android:hint="@string/conversation_owner_subject_hint"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:padding="@dimen/_5sdp"
            android:minLines="6"
            android:maxLines="10"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:hint="@string/conversation_owner_message_hint"
            android:layout_marginTop="16dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="right"
            android:paddingTop="@dimen/_16sdp"
            android:layout_height="wrap_content">
            <com.ridesharerental.widgets.textviews.Custom_Buttton_Bold
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/_16sdp"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/white_color"
                android:background="@drawable/primary_color_shape"
                android:text="@string/conversation_owner_btn_submit"/>
        </RelativeLayout>
</LinearLayout>

</RelativeLayout>