<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_main"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="0dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/owner_info"
                android:layout_height="wrap_content" />

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/ligth_gray"
                android:text=""
                android:id="@+id/txt_owner_info"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="10dp"
                android:background="#cdcdcd"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/car_info"
                android:layout_height="wrap_content" />

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/ligth_gray"
                android:text=""
                android:id="@+id/txt_car_info"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="10dp"
                android:background="#cdcdcd"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/booking_info"
                android:layout_height="wrap_content" />

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/ligth_gray"
                android:text=""
                android:id="@+id/txt_book_info"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="10dp"
                android:background="#cdcdcd"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/spent"
                android:layout_height="wrap_content" />

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/ligth_gray"
                android:text=""
                android:id="@+id/txt_spend"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="10dp"
                android:background="#cdcdcd"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/documents"
                android:layout_height="wrap_content" />

            <com.ridesharerental.widgets.textviews.Custom_TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/txt_insurance"
                android:textColor="@color/app_color_1"
                android:text="@string/insurance_document"
                android:layout_height="wrap_content" />

            <View
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:background="#cdcdcd"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_below="@+id/linear_main"
        android:visibility="visible"
        android:layout_marginTop="0dp"
        android:background="#cdcdcd"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


</RelativeLayout>
